--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h2>TIC TOC TOI</h2>
         <div class="box">
+            <div  class="inner-box" id="0"></div>
             <div  class="inner-box" id="1"></div>
             <div  class="inner-box" id="2"></div>
             <div  class="inner-box" id="3"></div>
@@ -18,8 +19,10 @@
             <div  class="inner-box" id="6"></div>
             <div  class="inner-box" id="7"></div>
             <div class="inner-box"  id="8"></div>
-            <div  class="inner-box" id="9"></div>
         </div>
+        <p class="result"></p>
+        <button>RESTART</button>
+        
     </div>
     <script src="script.js"></script>
 </body>
